--- a/chatbot.html
+++ b/chatbot.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Simko Chatbot</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
@@ -177,7 +178,7 @@
     appendMessage('user', userText);
     input.value = '';
 
-    const res = await fetch('http://127.0.0.1:5000/chat', {
+    const res = await fetch('https://chatbot-again.onrender.com/chat', {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
       body: JSON.stringify({ message: userText })
